Time: 4 ms (48.07%) | Memory: 43.7 MB (83.58%) - LeetSync